trying to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ pre {
 
 iframe {
     border: none;
+    overflow: hidden;
 }
 
 .menubar {
